基于cron规则的调度

--- a/quartzDemo/resource/jobCron.properties
+++ b/quartzDemo/resource/jobCron.properties
@@ -1,2 +1,2 @@
-cronJobClass=org.c2y2.quartz.job.SimpleJob.class
-cronJobCron=0/2 * * * * ?
+cronSimpleJobClass=org.c2y2.quartz.job.SimpleJob
+cronSimpleJobClassCron=0/2 * * * * ?
