--- a/quartzDemo/resource/jobCron.properties
+++ b/quartzDemo/resource/jobCron.properties
@@ -1,2 +1,6 @@
 cronSimpleJobClass=org.c2y2.quartz.job.SimpleJob
 cronSimpleJobClassCron=0/2 * * * * ?
+
+
+cronIntervalOutPrintJobClass=org.c2y2.quartz.job.IntervalOutPrint
+cronIntervalOutPrintJobClassCron=0/10 * * * * ?
